# gall

./: Cargo.toml  README.md  build.rs  rustfmt.toml
src/: action.rs  args.rs  blocks.rs  config.rs  main.rs  misc.rs  socket.rs
src/pickers/: apps.rs  mod.rs
