[package]
name = "gall"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
gdk-pixbuf = "0.20.10"
gtk4 = "0.9.6"
libc = "0.2.172"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"

[profile.release]
lto = true
opt-level = 3
codegen-units = 4
panic = "abort"
strip = true
